Fix that spacing

--- a/css/theme/style.css
+++ b/css/theme/style.css
@@ -2318,8 +2318,12 @@ section.accent {
 .post-listing {
   padding: 30px 0 10px;
 }
+/* line 38, ../../sass/partials/_main.scss */
+.square .post-listing {
+  padding: 10px 0 0;
+}
 
-/* line 39, ../../sass/partials/_main.scss */
+/* line 43, ../../sass/partials/_main.scss */
 .post-listing__single {
   margin-bottom: 20px;
 }
@@ -2327,53 +2331,53 @@ section.accent {
 /*------------------------------------*\
     #Subpages
 \*------------------------------------*/
-/* line 47, ../../sass/partials/_main.scss */
+/* line 51, ../../sass/partials/_main.scss */
 .book-cover {
   margin: 15px 0;
 }
 
-/* line 51, ../../sass/partials/_main.scss */
+/* line 55, ../../sass/partials/_main.scss */
 .post-header {
   margin-bottom: 30px;
   padding: 15px 30px;
 }
 @media screen and (min-width: 560px) {
-  /* line 51, ../../sass/partials/_main.scss */
+  /* line 55, ../../sass/partials/_main.scss */
   .post-header {
     padding: 30px 45px;
     margin-bottom: 90px;
   }
 }
 
-/* line 63, ../../sass/partials/_main.scss */
+/* line 67, ../../sass/partials/_main.scss */
 .subpage img,
 .subpage-custom img {
   width: 100%;
 }
 
-/* line 68, ../../sass/partials/_main.scss */
+/* line 72, ../../sass/partials/_main.scss */
 .subpage-body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 30px;
 }
 @media screen and (min-width: 560px) {
-  /* line 68, ../../sass/partials/_main.scss */
+  /* line 72, ../../sass/partials/_main.scss */
   .subpage-body {
     padding: 0;
   }
 }
 
-/* line 78, ../../sass/partials/_main.scss */
+/* line 82, ../../sass/partials/_main.scss */
 .square {
   padding-bottom: 50px;
 }
-/* line 81, ../../sass/partials/_main.scss */
+/* line 85, ../../sass/partials/_main.scss */
 .square.dark {
   background-color: #283e4c;
 }
 
-/* line 86, ../../sass/partials/_main.scss */
+/* line 90, ../../sass/partials/_main.scss */
 #mc_embed_signup {
   padding: 50px 0;
 }
